<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
        android:orientation="vertical">

        <!-- 앱 타이틀 바 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:elevation="1dp">

            <ImageButton
                android:id="@+id/btn_set_close"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:elevation="0dp"
                android:scaleType="center"
                android:src="@drawable/icon_back" />

            <TextView
                android:id="@+id/et_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:fontFamily="@font/sd_misaeng"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <!-- 설정 목록 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <!-- 일기 알림 활성화까지 남은 일수 표시 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorWhite"
                android:elevation="1dp"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/sd_misaeng"
                        android:text="@string/set_activity_install_count_title"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sd_misaeng"
                        android:text="@string/set_activity_install_count_description"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_first_diary_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/sd_misaeng"
                    android:gravity="center"
                    android:text="@string/set_activity_install_count"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- 주마등 알림 설정 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorWhite"
                android:elevation="1dp"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/sd_misaeng"
                        android:text="@string/set_activity_today_alarm"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:checked="true"
                        android:switchMinWidth="60dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/sd_misaeng"
                        android:text="@string/set_activity_today_alarm_cycle"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_alarm_cycle"
                        android:layout_width="55dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="75dp"
                        android:background="@color/colorGray"
                        android:fontFamily="@font/sd_misaeng"
                        android:text="@string/set_activity_today_alarm_cycle_default"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_alarm_time"
                        android:layout_width="55dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@color/colorGray"
                        android:fontFamily="@font/sd_misaeng"
                        android:text="@string/set_activity_today_alarm_time_default"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </RelativeLayout>
            </LinearLayout>

            <!-- 백업 & 복원 설정 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorWhite"
                android:elevation="1dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/sd_misaeng"
                    android:text="@string/set_activity_backup_resotre"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_restore"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:background="@color/colorGray"
                    android:fontFamily="@font/sd_misaeng"
                    android:gravity="center"
                    android:text="@string/set_activity_resotre"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_backup"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorGray"
                    android:fontFamily="@font/sd_misaeng"
                    android:gravity="center"
                    android:text="@string/set_activity_backup"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

            </RelativeLayout>

            <!-- 다시 일기 사용법 버튼 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorWhite"
                android:elevation="1dp"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/sd_misaeng"
                    android:text="@string/set_activity_re_tutorial"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_set_tutorial"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorGray"
                    android:fontFamily="@font/sd_misaeng"
                    android:gravity="center"
                    android:text="@string/set_activity_re_tutorial_button"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

            </RelativeLayout>

            <!-- 하단에 앱 버전 & 개발자 표시 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sd_misaeng"
                    android:gravity="start"
                    android:text="@string/set_activity_app_version"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sd_misaeng"
                    android:gravity="end"
                    android:text="@string/set_activity_developer_name"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>